opa-policies/constraint-denyroot.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRoot
metadata:
  name: deny-root
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
