opa-policies/constraint-ports.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictPorts
metadata:
  name: restrict-low-ports
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
