opa-policies/constraint-template-denyroot.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sroot
spec:
  crd:
    spec:
      names:
        kind: K8sRoot
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sroot

        contains violation[{"msg": msg}] if {
            container := input.review.object.spec.containers[_]
            container.securityContext.runAsUser == 0
            msg := sprintf("Container '%s' must not run as root (runAsUser: 0).", [container.name])
        }
