opa-policies/constraint-template-ports.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srestrictports
spec:
  crd:
    spec:
      names:
        kind: K8sRestrictPorts
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sports
        violation[{"msg": "Containers must only expose ports above 1024"}] {
            container := input.review.object.spec.containers[_]
            port := container.ports[_].containerPort
            port < 1024
        }
