opa-policies/constraint-template-volumes.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sreadonlyvolumes
spec:
  crd:
    spec:
      names:
        kind: K8sReadOnlyVolumes
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8svolumes
        violation[{"msg": "Mounted volumes must be read-only"}] {
            volume := input.review.object.spec.volumes[_]
            volume.persistentVolumeClaim.claimName
            not volume.persistentVolumeClaim.readOnly
        }
