opa-policies/constraint-volumes.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sReadOnlyVolumes
metadata:
  name: enforce-readonly-volumes
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
